# una-example

./: Dockerfile  Makefile  README.md  alt.Dockerfile  pyproject.toml  requirements.txt
apps/printer/: pyproject.toml
apps/printer/tests/: test_printer_import.py
apps/printer/una_example/printer/: __init__.py
apps/server/: pyproject.toml
apps/server/tests/: test_server_import.py
apps/server/una_example/server/: __init__.py
libs/greeter/: pyproject.toml
libs/greeter/tests/: test_greeter_import.py
libs/greeter/una_example/greeter/: __init__.py
