[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "basedpyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

build = "rye build --all"

[project]
name = "una-example"
version = "0.1.0"
requires-python = ">= 3.11"

[tool.rye]
managed = true
dev-dependencies = [
    "una>=0.3.0",
    "basedpyright>=1.16.0",
    "pytest>=8.3.2",
]
virtual = true

[tool.rye.workspace]
members = ["apps/*", "libs/*"]

[tool.una]
members = ["apps/*", "libs/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["A", "E", "F", "I", "N", "T100"]

[tool.ruff.lint.isort]
known-first-party = ["una_example"]

[tool.pytest.ini_options]
pythonpath = [
  "apps/*",
  "libs/*"
]
testpaths = [
  "apps/*",
  "libs/*",
]
addopts = ""
