[project]
name = "printer"
version = "0.1.0"
description = "Prints greetings from greeter"
authors = []
dependencies = ["greeter"]
requires-python = ">= 3.11"
dynamic = ["una"]  # needed for hatch-una metadata hook to work

[project.scripts]
una_printer = "una_example.printer:run"

[build-system]
requires = ["hatchling", "hatch-una>=0.5.1"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
greeter = { workspace = true }

[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
