[project]
name = "server"
version = "0.1.0"
description = "Prints greetings from greeter"
authors = []
dependencies = [
    "greeter",
    "starlette>=0.38.2",
    "uvicorn>=0.30.6",
]
requires-python = ">= 3.11"
dynamic = ["una"]  # needed for hatch-una metadata hook to work

[build-system]
requires = ["hatchling", "hatch-una>=0.5.1"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
greeter = { workspace = true }

[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
